<resources>
    <string name="app_name">TodoList</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loading">Loading</string>
    <string name="empty_field">Field can\'t be empty</string>
    <string name="something_wrong">Something wrong</string>
    <string name="register_success">Successfully registered! Please login</string>
    <string name="no_account">Don\'t have account? Register</string>
    <string name="have_account">Already have an account? Login</string>
</resources>